# sentry-rust

./: .gitignore  Cargo.toml
examples/: simple.rs
src/: lib.rs
