[package]
authors = ["Alexis Agahi <aagahi@prefetch.com>"]
description = "Sentry (getsentry.com) client for rust ;)\n"
documentation = "https://github.com/getsentry/sentry-rust"
homepage = "https://github.com/getsentry/sentry-rust"
license = "MIT/Apache-2.0"
name = "sentry"
readme = "Readme.md"
repository = "https://github.com/getsentry/sentry-rust"
version = "0.2.0"

[dependencies]
backtrace = "0.3"
failure = "0.1.1"
hyper = "0.11"
log = "0.3"
reqwest = "0.8.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
time = "0.1"

[dev-dependencies]
dotenv = "0.10.1"
